--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +34,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numpy verisopn: 2.2.3\n",
+      "{\n",
+      "  \"Compilers\": {\n",
+      "    \"c\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    },\n",
+      "    \"cython\": {\n",
+      "      \"name\": \"cython\",\n",
+      "      \"linker\": \"cython\",\n",
+      "      \"version\": \"3.0.12\",\n",
+      "      \"commands\": \"cython\"\n",
+      "    },\n",
+      "    \"c++\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30158\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Machine Information\": {\n",
+      "    \"host\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    },\n",
+      "    \"build\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Build Dependencies\": {\n",
+      "    \"blas\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    },\n",
+      "    \"lapack\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-3gfa2f0z/cp311-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Python Information\": {\n",
+      "    \"path\": \"C:\\\\Users\\\\runneradmin\\\\AppData\\\\Local\\\\Temp\\\\build-env-k51dk6fd\\\\Scripts\\\\python.exe\",\n",
+      "    \"version\": \"3.11\"\n",
+      "  },\n",
+      "  \"SIMD Extensions\": {\n",
+      "    \"baseline\": [\n",
+      "      \"SSE\",\n",
+      "      \"SSE2\",\n",
+      "      \"SSE3\"\n",
+      "    ],\n",
+      "    \"found\": [\n",
+      "      \"SSSE3\",\n",
+      "      \"SSE41\",\n",
+      "      \"POPCNT\",\n",
+      "      \"SSE42\",\n",
+      "      \"AVX\",\n",
+      "      \"F16C\",\n",
+      "      \"FMA3\",\n",
+      "      \"AVX2\",\n",
+      "      \"AVX512F\",\n",
+      "      \"AVX512CD\",\n",
+      "      \"AVX512_SKX\",\n",
+      "      \"AVX512_CLX\",\n",
+      "      \"AVX512_CNL\",\n",
+      "      \"AVX512_ICL\"\n",
+      "    ]\n",
+      "  }\n",
+      "}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hp\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\numpy\\__config__.py:155: UserWarning: Install `pyyaml` for better output\n",
+      "  warnings.warn(\"Install `pyyaml` for better output\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"numpy verisopn:\", np.__version__)\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +153,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.random((2, 3, 5))"
    ]
   },
   {
@@ -68,11 +170,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.97901782 0.94441709 0.35188322 0.07353255 0.04386022]\n",
+      "  [0.9158778  0.45563806 0.03783118 0.87739392 0.89482554]\n",
+      "  [0.71482935 0.08430902 0.27480399 0.19143848 0.82216133]]\n",
+      "\n",
+      " [[0.79679816 0.70116496 0.40817567 0.94452684 0.40806582]\n",
+      "  [0.50907947 0.22880744 0.53248259 0.54468359 0.17117991]\n",
+      "  [0.18772744 0.25974109 0.49564376 0.32598226 0.34723456]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(a)\n"
    ]
   },
   {
@@ -85,11 +201,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "b = np.ones((5, 2, 3))\n"
    ]
   },
   {
@@ -102,11 +218,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +256,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is a have the same size to b? False\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "sizea = np.size(a)\n",
+    "sizeb = np.size(b)\n",
+    "print(f\"Is a have the same size to b? {sizea == sizeb}\")"
    ]
   },
   {
@@ -136,11 +283,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a and b are able to add\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "try:\n",
+    "    add = a + b\n",
+    "    print(\"a and b are able to add\")\n",
+    "except TypeError:\n",
+    "    print(\"a anf b are not able to add\")"
    ]
   },
   {
@@ -154,11 +313,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3,)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "c = np.transpose(b, axes= (1,2,0))\n",
+    "print(c)"
    ]
   },
   {
@@ -171,11 +363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "we can a and c because they have the same size\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "d = a + c\n",
+    "try:  \n",
+    "    d = a + c\n",
+    "    print(\"we can a and c because they have the same size\")\n",
+    "except TypeError:\n",
+    "    print(\"we can not add a and c\")"
    ]
   },
   {
@@ -188,12 +393,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:[[[0.97901782 0.94441709 0.35188322 0.07353255 0.04386022]\n",
+      "  [0.9158778  0.45563806 0.03783118 0.87739392 0.89482554]\n",
+      "  [0.71482935 0.08430902 0.27480399 0.19143848 0.82216133]]\n",
+      "\n",
+      " [[0.79679816 0.70116496 0.40817567 0.94452684 0.40806582]\n",
+      "  [0.50907947 0.22880744 0.53248259 0.54468359 0.17117991]\n",
+      "  [0.18772744 0.25974109 0.49564376 0.32598226 0.34723456]]]\n",
+      "shape a: (2, 3, 5)\n",
+      "d:[[[1.97901782 1.94441709 1.35188322 1.07353255 1.04386022]\n",
+      "  [1.9158778  1.45563806 1.03783118 1.87739392 1.89482554]\n",
+      "  [1.71482935 1.08430902 1.27480399 1.19143848 1.82216133]]\n",
+      "\n",
+      " [[1.79679816 1.70116496 1.40817567 1.94452684 1.40806582]\n",
+      "  [1.50907947 1.22880744 1.53248259 1.54468359 1.17117991]\n",
+      "  [1.18772744 1.25974109 1.49564376 1.32598226 1.34723456]]]\n",
+      "shape d: (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "print(f\"a:{a}\")\n",
+    "print(f\"shape a: {a.shape}\")\n",
+    "print(f\"d:{d}\")\n",
+    "print(f\"shape d: {d.shape}\")"
    ]
   },
   {
@@ -206,11 +436,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.97901782 0.94441709 0.35188322 0.07353255 0.04386022]\n",
+      "  [0.9158778  0.45563806 0.03783118 0.87739392 0.89482554]\n",
+      "  [0.71482935 0.08430902 0.27480399 0.19143848 0.82216133]]\n",
+      "\n",
+      " [[0.79679816 0.70116496 0.40817567 0.94452684 0.40806582]\n",
+      "  [0.50907947 0.22880744 0.53248259 0.54468359 0.17117991]\n",
+      "  [0.18772744 0.25974109 0.49564376 0.32598226 0.34723456]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "e = a * c\n",
+    "print(e)\n"
    ]
   },
   {
@@ -224,11 +469,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e = a\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
+    "try:\n",
+    "    e == a \n",
+    "    print(\"e = a\")\n",
+    "except TypeError:\n",
+    "    print(\"not equal\")\n",
     "\n"
    ]
   },
@@ -243,12 +500,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_max: 1.9790178209384601, d_min: 1.0378311830889886, d_mean: 1.484103770718376\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "print(f\"d_max: {d_max}, d_min: {d_min}, d_mean: {d_mean}\")\n"
    ]
   },
   {
@@ -261,11 +528,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.97901782 0.94441709 0.35188322 0.07353255 0.04386022]\n",
+      "  [0.9158778  0.45563806 0.03783118 0.87739392 0.89482554]\n",
+      "  [0.71482935 0.08430902 0.27480399 0.19143848 0.82216133]]\n",
+      "\n",
+      " [[0.79679816 0.70116496 0.40817567 0.94452684 0.40806582]\n",
+      "  [0.50907947 0.22880744 0.53248259 0.54468359 0.17117991]\n",
+      "  [0.18772744 0.25974109 0.49564376 0.32598226 0.34723456]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f = np.empty_like(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -287,11 +569,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n"
    ]
   },
   {
@@ -325,11 +619,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\n",
+      "[[[1.97901782 1.94441709 1.35188322 1.07353255 1.04386022]\n",
+      "  [1.9158778  1.45563806 1.03783118 1.87739392 1.89482554]\n",
+      "  [1.71482935 1.08430902 1.27480399 1.19143848 1.82216133]]\n",
+      "\n",
+      " [[1.79679816 1.70116496 1.40817567 1.94452684 1.40806582]\n",
+      "  [1.50907947 1.22880744 1.53248259 1.54468359 1.17117991]\n",
+      "  [1.18772744 1.25974109 1.49564376 1.32598226 1.34723456]]]\n",
+      "f:\n",
+      "[[[100.  75.  25.  25.  25.]\n",
+      "  [ 75.  25.   0.  75.  75.]\n",
+      "  [ 75.  25.  25.  25.  75.]]\n",
+      "\n",
+      " [[ 75.  75.  25.  75.  25.]\n",
+      "  [ 75.  25.  75.  75.  25.]\n",
+      "  [ 25.  25.  75.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "print(\"d:\")\n",
+    "print(d)\n",
+    "print(\"f:\")\n",
+    "print(f)\n"
    ]
   },
   {
@@ -350,11 +670,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f with string labels:\n",
+      "[[['E' 'D' 'B' 'B' 'B']\n",
+      "  ['D' 'B' 'A' 'D' 'D']\n",
+      "  ['D' 'B' 'B' 'B' 'D']]\n",
+      "\n",
+      " [['D' 'D' 'B' 'D' 'B']\n",
+      "  ['D' 'B' 'D' 'D' 'B']\n",
+      "  ['B' 'B' 'D' 'B' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "f_string = np.empty_like(f, dtype=object)\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f_string[i, j, k] = 'A'\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f_string[i, j, k] = 'E'\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f_string[i, j, k] = 'C'\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f_string[i, j, k] = 'B'\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f_string[i, j, k] = 'D'\n",
+    "\n",
+    "print(\"f with string labels:\")\n",
+    "print(f_string)"
    ]
   }
  ],
@@ -374,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
