--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NumPy version: 1.26.4\n",
+      "Build Dependencies:\n",
+      "  blas:\n",
+      "    detection method: pkgconfig\n",
+      "    found: true\n",
+      "    include directory: C:/ProgramData/anaconda3/Library/include\n",
+      "    lib directory: C:/ProgramData/anaconda3/Library/lib\n",
+      "    name: mkl-sdl\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\Library\\lib\\pkgconfig\n",
+      "    version: '2023.1'\n",
+      "  lapack:\n",
+      "    detection method: internal\n",
+      "    found: true\n",
+      "    include directory: unknown\n",
+      "    lib directory: unknown\n",
+      "    name: dep1868282989520\n",
+      "    openblas configuration: unknown\n",
+      "    pc file directory: unknown\n",
+      "    version: 1.26.4\n",
+      "Compilers:\n",
+      "  c:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  c++:\n",
+      "    commands: cl.exe\n",
+      "    linker: link\n",
+      "    name: msvc\n",
+      "    version: 19.29.30154\n",
+      "  cython:\n",
+      "    commands: cython\n",
+      "    linker: cython\n",
+      "    name: cython\n",
+      "    version: 3.0.8\n",
+      "Machine Information:\n",
+      "  build:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "  host:\n",
+      "    cpu: x86_64\n",
+      "    endian: little\n",
+      "    family: x86_64\n",
+      "    system: windows\n",
+      "Python Information:\n",
+      "  path: C:\\b\\abs_c1ywpu18ar\\croot\\numpy_and_numpy_base_1708638681471\\_h_env\\python.exe\n",
+      "  version: '3.11'\n",
+      "SIMD Extensions:\n",
+      "  baseline:\n",
+      "  - SSE\n",
+      "  - SSE2\n",
+      "  - SSE3\n",
+      "  found:\n",
+      "  - SSSE3\n",
+      "  - SSE41\n",
+      "  - POPCNT\n",
+      "  - SSE42\n",
+      "  - AVX\n",
+      "  - F16C\n",
+      "  - FMA3\n",
+      "  - AVX2\n",
+      "  - AVX512F\n",
+      "  - AVX512CD\n",
+      "  - AVX512_SKX\n",
+      "  - AVX512_CLX\n",
+      "  - AVX512_CNL\n",
+      "  - AVX512_ICL\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "print(\"NumPy version:\", np.__version__)\n",
+    "\n",
+    "np.show_config()"
    ]
   },
   {
@@ -51,11 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "a = np.random.random((2, 3, 5))\n",
+    "a1 = np.random.randn(2, 3, 5)\n",
+    "a2 = np.random.rand(2, 3, 5)\n"
    ]
   },
   {
@@ -68,11 +153,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.38811115 0.83210304 0.2150176  0.8411417  0.6933241 ]\n",
+      "  [0.34772951 0.23398378 0.21136113 0.38788881 0.1082747 ]\n",
+      "  [0.74836034 0.93757951 0.35301078 0.2393756  0.2306908 ]]\n",
+      "\n",
+      " [[0.64950145 0.96594381 0.97620714 0.86339747 0.04156347]\n",
+      "  [0.08647645 0.78914751 0.27333446 0.60161838 0.73146351]\n",
+      "  [0.77418484 0.4540441  0.07538955 0.02505227 0.69719348]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "b = np.ones((5, 2, 3))\n"
    ]
   },
   {
@@ -102,11 +206,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))\n",
+    "print(b)\n"
    ]
   },
   {
@@ -119,11 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Do a and b have the same size? True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "b = np.ones((5, 2, 3))\n",
+    "same_size = a.size == b.size\n",
+    "\n",
+    "\n",
+    "print(\"Do a and b have the same size?\", same_size)\n"
    ]
   },
   {
@@ -136,11 +277,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can a and b be added? False\n",
+      "No because a and b don't have the same shape\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "\n",
+    "b = np.ones((5, 2, 3))\n",
+    "\n",
+    "can_add = a.shape == b.shape\n",
+    "\n",
+    "print(\"Can a and b be added?\", can_add)\n",
+    "print(\"No because a and b don't have the same shape\")\n"
    ]
   },
   {
@@ -154,11 +312,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))\n",
+    "\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "\n",
+    "print(c)\n"
    ]
   },
   {
@@ -171,11 +348,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.12545567 1.31808126 1.5308554  1.27015523 1.27948316]\n",
+      "  [1.78268139 1.12097266 1.67582497 1.44675642 1.77694926]\n",
+      "  [1.46516108 1.82699521 1.36581353 1.03679072 1.96128943]]\n",
+      "\n",
+      " [[1.7421449  1.81545756 1.4895003  1.72509551 1.20581322]\n",
+      "  [1.84347796 1.25322655 1.07269685 1.86994629 1.051319  ]\n",
+      "  [1.21835284 1.41494133 1.77470319 1.5354121  1.33494174]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "\n",
+    "b = np.ones((5, 2, 3))\n",
+    "\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "\n",
+    "d = a + c\n",
+    "\n",
+    "print(d)\n"
    ]
   },
   {
@@ -188,11 +388,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:\n",
+      "[[[0.86123193 0.25612407 0.35310084 0.44019274 0.54189136]\n",
+      "  [0.28851163 0.76254302 0.59173405 0.45046624 0.24871472]\n",
+      "  [0.32805958 0.96547598 0.57488827 0.95020807 0.48758322]]\n",
+      "\n",
+      " [[0.01414526 0.58253841 0.93717899 0.73847994 0.14199568]\n",
+      "  [0.74463478 0.86043443 0.6590033  0.74300258 0.79354714]\n",
+      "  [0.45395036 0.06705639 0.21060628 0.12736143 0.48782766]]]\n",
+      "\n",
+      "Array d (a + c):\n",
+      "[[[1.86123193 1.25612407 1.35310084 1.44019274 1.54189136]\n",
+      "  [1.28851163 1.76254302 1.59173405 1.45046624 1.24871472]\n",
+      "  [1.32805958 1.96547598 1.57488827 1.95020807 1.48758322]]\n",
+      "\n",
+      " [[1.01414526 1.58253841 1.93717899 1.73847994 1.14199568]\n",
+      "  [1.74463478 1.86043443 1.6590033  1.74300258 1.79354714]\n",
+      "  [1.45395036 1.06705639 1.21060628 1.12736143 1.48782766]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "\n",
+    "\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "\n",
+    "b = np.ones((5, 2, 3))\n",
+    "\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "\n",
+    "d = a + c\n",
+    "\n",
+    "print(\"Array a:\")\n",
+    "print(a)\n",
+    "print(\"\\nArray d (a + c):\")\n",
+    "print(d)\n",
     "\n"
    ]
   },
@@ -206,11 +444,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array a:\n",
+      "[[[0.22403688 0.40959462 0.569414   0.68631815 0.68500514]\n",
+      "  [0.86583024 0.9851106  0.87491691 0.41966071 0.37647884]\n",
+      "  [0.24697673 0.89020725 0.73216385 0.39710094 0.33773356]]\n",
+      "\n",
+      " [[0.67829828 0.28402251 0.66800824 0.3776723  0.21528081]\n",
+      "  [0.51828019 0.88439152 0.8204211  0.86123559 0.09318252]\n",
+      "  [0.24024664 0.71779588 0.82971987 0.45767104 0.30278398]]]\n",
+      "\n",
+      "Array c:\n",
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n",
+      "\n",
+      "Array e (a * c):\n",
+      "[[[0.22403688 0.40959462 0.569414   0.68631815 0.68500514]\n",
+      "  [0.86583024 0.9851106  0.87491691 0.41966071 0.37647884]\n",
+      "  [0.24697673 0.89020725 0.73216385 0.39710094 0.33773356]]\n",
+      "\n",
+      " [[0.67829828 0.28402251 0.66800824 0.3776723  0.21528081]\n",
+      "  [0.51828019 0.88439152 0.8204211  0.86123559 0.09318252]\n",
+      "  [0.24024664 0.71779588 0.82971987 0.45767104 0.30278398]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "\n",
+    "b = np.ones((5, 2, 3))\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "\n",
+    "e = a * c\n",
+    "\n",
+    "print(\"Array a:\")\n",
+    "print(a)\n",
+    "print(\"\\nArray c:\")\n",
+    "print(c)\n",
+    "print(\"\\nArray e (a * c):\")\n",
+    "print(e)"
    ]
   },
   {
@@ -224,12 +508,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is e equal to a? True\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "equal = np.array_equal(e, a)\n",
+    "print(\"Is e equal to a?\", equal)"
    ]
   },
   {
@@ -243,11 +536,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max value in d: 1.9758655111300132\n",
+      "Min value in d: 1.0414327602555264\n",
+      "Mean value in d: 1.4896031052441103\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "b = np.ones((5, 2, 3))\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "d = a + c\n",
+    "\n",
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "\n",
+    "print(\"Max value in d:\", d_max)\n",
+    "print(\"Min value in d:\", d_min)\n",
+    "print(\"Mean value in d:\", d_mean)\n",
     "\n"
    ]
   },
@@ -261,11 +576,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of f: (2, 3, 5)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3))\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "d = a + c\n",
+    "\n",
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "print(\"Shape of f:\", f.shape)\n"
    ]
   },
   {
@@ -287,11 +617,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populated array f:\n",
+      "[[[ 75.  75.  25.  25.  75.]\n",
+      "  [ 25.  25.  75.  25.  25.]\n",
+      "  [  0.  75.  75.  75.  75.]]\n",
+      "\n",
+      " [[ 25.  25.  25.  25.  25.]\n",
+      "  [ 75.  25.  25.  25.  75.]\n",
+      "  [ 75. 100.  75.  75.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "b = np.ones((5, 2, 3))\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "d = a + c\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "d_max = np.max(d)\n",
+    "\n",
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "for i in range(d.shape[0]):      \n",
+    "    for j in range(d.shape[1]): \n",
+    "        for k in range(d.shape[2]):  \n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "\n",
+    "print(\"Populated array f:\")\n",
+    "print(f)"
    ]
   },
   {
@@ -325,11 +697,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d:\n",
+      "[[[1.33487902 1.68249711 1.96080429 1.04630426 1.79143252]\n",
+      "  [1.60720291 1.14613374 1.73831699 1.5988198  1.35317104]\n",
+      "  [1.89198728 1.43312557 1.0204446  1.4842357  1.39317215]]\n",
+      "\n",
+      " [[1.58834905 1.60508135 1.35600677 1.81092382 1.29011376]\n",
+      "  [1.72383288 1.84027107 1.99671002 1.27922437 1.73160512]\n",
+      "  [1.6694039  1.94418519 1.66165713 1.53295667 1.86491511]]]\n",
+      "\n",
+      "Populated array f:\n",
+      "[[[ 25.  75.  75.  25.  75.]\n",
+      "  [ 75.  25.  75.  75.  25.]\n",
+      "  [ 75.  25.   0.  25.  25.]]\n",
+      "\n",
+      " [[ 75.  75.  25.  75.  25.]\n",
+      "  [ 75.  75. 100.  25.  75.]\n",
+      "  [ 75.  75.  75.  25.  75.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "b = np.ones((5, 2, 3))\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "d = a + c\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "d_max = np.max(d)\n",
+    "\n",
+    "f = np.empty(d.shape)\n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 0\n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 50\n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 100\n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 25\n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 75\n",
+    "\n",
+    "print(\"Array d:\")\n",
+    "print(d)\n",
+    "print(\"\\nPopulated array f:\")\n",
+    "print(f)"
    ]
   },
   {
@@ -350,17 +775,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array d:\n",
+      "[[[1.28313079 1.74521711 1.92596266 1.47955589 1.82252031]\n",
+      "  [1.21689804 1.50862853 1.9292224  1.34916917 1.56353782]\n",
+      "  [1.61501786 1.06751724 1.3024948  1.98242932 1.49141004]]\n",
+      "\n",
+      " [[1.60078849 1.53068871 1.61243549 1.1427043  1.96893304]\n",
+      "  [1.42185982 1.75813548 1.11589796 1.96335529 1.37153357]\n",
+      "  [1.68914723 1.69091575 1.11235002 1.90360392 1.2031979 ]]]\n",
+      "\n",
+      "Populated array f with strings:\n",
+      "[[['B' 'D' 'D' 'B' 'D']\n",
+      "  ['B' 'B' 'D' 'B' 'D']\n",
+      "  ['D' 'A' 'B' 'E' 'B']]\n",
+      "\n",
+      " [['D' 'B' 'D' 'B' 'D']\n",
+      "  ['B' 'D' 'B' 'D' 'B']\n",
+      "  ['D' 'D' 'B' 'D' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "a = np.random.rand(2, 3, 5)\n",
+    "b = np.ones((5, 2, 3))\n",
+    "c = b.transpose(1, 2, 0)\n",
+    "d = a + c\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "d_mean = np.mean(d)\n",
+    "d_max = np.max(d)\n",
+    "\n",
+    "f = np.empty(d.shape, dtype=object)  \n",
+    "\n",
+    "for i in range(d.shape[0]):\n",
+    "    for j in range(d.shape[1]):\n",
+    "        for k in range(d.shape[2]):\n",
+    "            if d[i, j, k] == d_min:\n",
+    "                f[i, j, k] = 'A' \n",
+    "            elif d[i, j, k] == d_mean:\n",
+    "                f[i, j, k] = 'C' \n",
+    "            elif d[i, j, k] == d_max:\n",
+    "                f[i, j, k] = 'E' \n",
+    "            elif d_min < d[i, j, k] < d_mean:\n",
+    "                f[i, j, k] = 'B' \n",
+    "            elif d_mean < d[i, j, k] < d_max:\n",
+    "                f[i, j, k] = 'D' \n",
+    "print(\"Array d:\")\n",
+    "print(d)\n",
+    "print(\"\\nPopulated array f with strings:\")\n",
+    "print(f)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
